--- a/force-app/main/default/lwc/portfolioUserDetailsAndStatsWrapper/portfolioUserDetailsAndStatsWrapper.html
+++ b/force-app/main/default/lwc/portfolioUserDetailsAndStatsWrapper/portfolioUserDetailsAndStatsWrapper.html
@@ -2,13 +2,23 @@
     <div class="userDetailsAndStatsWrapper">
         <lightning-layout multiple-rows>
             <lightning-layout-item size="12">
-                <c-portfolio-user-details
-                    record-id={recordId}
-                    object-api-name={objectApiName}
-                ></c-portfolio-user-details>
+                <template lwc:if={recordId}>
+                    <c-portfolio-user-details
+                        record-id={recordId}
+                        object-api-name={objectApiName}
+                        resume-url={resumeUrl}
+                    ></c-portfolio-user-details>
+                </template>
             </lightning-layout-item>
             <lightning-layout-item size="12">
-                <c-portfolio-user-stats></c-portfolio-user-stats>
+                <template lwc:if={rank}>
+                    <c-portfolio-user-stats
+                        rank={rank}
+                        badges={badges}
+                        points={points}
+                        trails={trails}
+                    ></c-portfolio-user-stats>
+                </template>
             </lightning-layout-item>
         </lightning-layout>
     </div>
